// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StreamTextBuilder > Integration Test > should handle all features in a comprehensive workflow 1`] = `
[
  {
    "input": {
      "prompt": [
        {
          "content": "Remember to use the tools wisely to assist the user effectively.",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Hello, I need help with some calculations.",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Of course! I'd be happy to help with calculations.",
              "type": "text",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "text": "Can you add 25 and 17, then format the result as currency?",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "a": 25,
            "b": 17,
            "operation": "add",
          },
          "toolCallId": "call_1",
          "toolName": "calculator",
          "type": "tool-call",
        },
        {
          "text": "Let me help you with that calculation. ",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "input": {
      "prompt": [
        {
          "content": "You are an expert mathematical assistant.
Always explain your calculations clearly.
Use the tools available to you for accuracy.",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Hello, I need help with some calculations.",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Of course! I'd be happy to help with calculations.",
              "type": "text",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "text": "Can you add 25 and 17, then format the result as currency?",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Let me help you with that calculation. ",
              "type": "text",
            },
            {
              "input": {
                "a": 25,
                "b": 17,
                "operation": "add",
              },
              "toolCallId": "call_1",
              "toolName": "calculator",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "result": 42,
                },
              },
              "toolCallId": "call_1",
              "toolName": "calculator",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "format": "currency",
            "value": 42,
          },
          "toolCallId": "call_2",
          "toolName": "formatter",
          "type": "tool-call",
        },
        {
          "text": "The sum of 25 and 17 is 42. ",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "input": {
      "prompt": [
        {
          "content": "You are an expert mathematical assistant.
Always explain your calculations clearly.
Use the tools available to you for accuracy.",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Hello, I need help with some calculations.",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Of course! I'd be happy to help with calculations.",
              "type": "text",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "text": "Can you add 25 and 17, then format the result as currency?",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Let me help you with that calculation. ",
              "type": "text",
            },
            {
              "input": {
                "a": 25,
                "b": 17,
                "operation": "add",
              },
              "toolCallId": "call_1",
              "toolName": "calculator",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "result": 42,
                },
              },
              "toolCallId": "call_1",
              "toolName": "calculator",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
        {
          "content": [
            {
              "text": "The sum of 25 and 17 is 42. ",
              "type": "text",
            },
            {
              "input": {
                "format": "currency",
                "value": 42,
              },
              "toolCallId": "call_2",
              "toolName": "formatter",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "formatted": "$42.00",
                },
              },
              "toolCallId": "call_2",
              "toolName": "formatter",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Formatted as currency: $42.00",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`StreamTextBuilder > compressedSteps > should compress steps by deduplicating messages 1`] = `
{
  "messagePool": [
    {
      "content": "You are a helpful search assistant.",
      "role": "system",
    },
    {
      "content": [
        {
          "text": "Search for test information",
          "type": "text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Let me search for that. ",
          "type": "text",
        },
        {
          "input": {
            "query": "test",
          },
          "toolCallId": "call_1",
          "toolName": "search",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "json",
            "value": {
              "results": [
                "result1",
                "result2",
              ],
            },
          },
          "toolCallId": "call_1",
          "toolName": "search",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
    {
      "content": [
        {
          "text": "Found some results. ",
          "type": "text",
        },
        {
          "input": {
            "query": "more info",
          },
          "toolCallId": "call_2",
          "toolName": "search",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "json",
            "value": {
              "results": [
                "result1",
                "result2",
              ],
            },
          },
          "toolCallId": "call_2",
          "toolName": "search",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
  ],
  "stats": {
    "savingsRatio": 0.5,
    "stepCount": 3,
    "totalUncompressedMessages": 12,
    "uniqueMessages": 6,
  },
  "steps": [
    {
      "deltaStart": 0,
      "messageRefs": [
        0,
        1,
      ],
      "output": {
        "content": [
          {
            "input": {
              "query": "test",
            },
            "toolCallId": "call_1",
            "toolName": "search",
            "type": "tool-call",
          },
          {
            "text": "Let me search for that. ",
            "type": "text",
          },
        ],
        "finishReason": "tool-calls",
      },
      "state": {},
      "stepIndex": 0,
    },
    {
      "deltaStart": 2,
      "messageRefs": [
        0,
        1,
        2,
        3,
      ],
      "output": {
        "content": [
          {
            "input": {
              "query": "more info",
            },
            "toolCallId": "call_2",
            "toolName": "search",
            "type": "tool-call",
          },
          {
            "text": "Found some results. ",
            "type": "text",
          },
        ],
        "finishReason": "tool-calls",
      },
      "state": {},
      "stepIndex": 1,
    },
    {
      "deltaStart": 4,
      "messageRefs": [
        0,
        1,
        2,
        3,
        4,
        5,
      ],
      "output": {
        "content": [
          {
            "text": "Here is the information you requested.",
            "type": "text",
          },
        ],
        "finishReason": "stop",
      },
      "state": {},
      "stepIndex": 2,
    },
  ],
}
`;

exports[`StreamTextBuilder > compressedSteps > should correctly track delta messages between steps 1`] = `
{
  "messagePool": [
    {
      "content": "System prompt",
      "role": "system",
    },
    {
      "content": [
        {
          "text": "User message",
          "type": "text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Response 1 ",
          "type": "text",
        },
        {
          "input": {
            "value": 1,
          },
          "toolCallId": "call_1",
          "toolName": "tool1",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "json",
            "value": {
              "success": true,
            },
          },
          "toolCallId": "call_1",
          "toolName": "tool1",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
  ],
  "step0Delta": [
    {
      "content": "System prompt",
      "role": "system",
    },
    {
      "content": [
        {
          "text": "User message",
          "type": "text",
        },
      ],
      "role": "user",
    },
  ],
  "step1Delta": [
    {
      "content": [
        {
          "text": "Response 1 ",
          "type": "text",
        },
        {
          "input": {
            "value": 1,
          },
          "toolCallId": "call_1",
          "toolName": "tool1",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "json",
            "value": {
              "success": true,
            },
          },
          "toolCallId": "call_1",
          "toolName": "tool1",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
  ],
  "steps": [
    {
      "deltaStart": 0,
      "messageRefs": [
        0,
        1,
      ],
      "stepIndex": 0,
    },
    {
      "deltaStart": 2,
      "messageRefs": [
        0,
        1,
        2,
        3,
      ],
      "stepIndex": 1,
    },
  ],
}
`;

exports[`StreamTextBuilder > compressedSteps > should handle system prompt changes between steps 1`] = `
{
  "messagePool": [
    {
      "content": "System prompt version 1",
      "role": "system",
    },
    {
      "content": [
        {
          "text": "User message",
          "type": "text",
        },
      ],
      "role": "user",
    },
    {
      "content": "System prompt version 2",
      "role": "system",
    },
    {
      "content": [
        {
          "text": "First response ",
          "type": "text",
        },
        {
          "input": {
            "value": 1,
          },
          "toolCallId": "call_1",
          "toolName": "tool1",
          "type": "tool-call",
        },
      ],
      "role": "assistant",
    },
    {
      "content": [
        {
          "output": {
            "type": "json",
            "value": {
              "success": true,
            },
          },
          "toolCallId": "call_1",
          "toolName": "tool1",
          "type": "tool-result",
        },
      ],
      "role": "tool",
    },
  ],
  "stats": {
    "savingsRatio": 0.16666666666666663,
    "stepCount": 2,
    "totalUncompressedMessages": 6,
    "uniqueMessages": 5,
  },
  "steps": [
    {
      "deltaStart": 0,
      "messageRefs": [
        0,
        1,
      ],
      "stepIndex": 0,
    },
    {
      "deltaStart": 0,
      "messageRefs": [
        2,
        1,
        3,
        4,
      ],
      "stepIndex": 1,
    },
  ],
}
`;
